<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:columnCount="2"
    android:rowCount="2"
    android:columnOrderPreserved="false"
    android:layout_margin="@dimen/cell_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:background="@color/c1color"
        android:layout_margin="@dimen/cell_margin"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/cell1tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/cell_margin"
            android:text="@string/cell1tv1"/>
        <TextView
            android:id="@+id/cell1tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/cell_margin"
            android:text="@string/cell1tv2"/>
        <TextView
            android:id="@+id/cell1tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/cell_margin"
            android:text="@string/cell1tv3"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/c2color"
        android:layout_margin="@dimen/cell_margin">
        <TextView
            android:id="@+id/cell2tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/cell2tv1"/>
        <TextView
            android:id="@+id/cell2tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/cell2tv2"/>
        <TextView
            android:id="@+id/cell2tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/cell2tv3"/>
        <TextView
            android:id="@+id/cell2tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:text="@string/cell2tv4"/>
        <TextView
            android:id="@+id/cell2tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/cell2tv5"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:background="@color/c3color"
        android:layout_margin="@dimen/cell_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/cell_margin"
            android:text="@string/cell3tv1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/cell_margin"
            android:text="@string/cell3tv2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/cell_margin"
            android:text="@string/cell3tv3"/>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/c4color"
        android:layout_margin="@dimen/cell_margin">
        <Button
            android:id="@+id/cell4btn1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            app:layout_constraintCircle="@id/cell4btn2"
            app:layout_constraintCircleRadius="@dimen/circle_radius"
            app:layout_constraintCircleAngle="0"
            android:text="@string/cell4btn1"/>

        <Button
            android:id="@+id/cell4btn2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:text="@string/cell4btn2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</GridLayout>
